[gd_scene load_steps=8 format=2]

[ext_resource path="res://imagesFiles/Main_Scene/High-Score_Button.png" type="Texture" id=1]
[ext_resource path="res://imagesFiles/Main_Scene/grey_background.png" type="Texture" id=2]
[ext_resource path="res://imagesFiles/Main_Scene/Exit_Button.png" type="Texture" id=3]
[ext_resource path="res://imagesFiles/Main_Scene/Options_Button.png" type="Texture" id=4]
[ext_resource path="res://imagesFiles/Main_Scene/StartLevel_Button.png" type="Texture" id=5]
[ext_resource path="res://Scripts/MainScene_Interaction/MainScene.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Options/OptionsMenu.tscn" type="PackedScene" id=7]

[node name="MainScene" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.26001
margin_top = -4.0
margin_right = -0.26001
margin_bottom = -4.0
texture = ExtResource( 2 )
expand = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.5
margin_top = 112.0
margin_right = 91.5
margin_bottom = 202.0
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScoreButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.5
margin_top = -108.0
margin_right = 91.5
margin_bottom = -18.0
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.5
margin_top = 4.0
margin_right = 91.5
margin_bottom = 94.0
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartLevelButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.5
margin_top = -210.0
margin_right = 91.5
margin_bottom = -120.0
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" parent="." instance=ExtResource( 7 )]
margin_left = 1.37811
margin_top = 3.53987
margin_right = 1.37817
margin_bottom = 3.53986
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="StartLevelButton" to="." method="_on_StartLevelButton_pressed"]
